--- a/scss/components/_modal.scss
+++ b/scss/components/_modal.scss
@@ -135,7 +135,7 @@
 
 .sc-modal-header .sc-button-close
 {
-    padding: calc(1rem * 0.5) calc(1rem * 0,5);
+    padding: calc(1rem * 0.5) calc(1rem * 0.5);
     margin: calc(-0.5 * 1rem) calc(-0.5 * 1rem) calc(-0.5 * 1rem) auto;
 }
 .sc-modal-title
