--- a/scss/spacing/_margin.scss
+++ b/scss/spacing/_margin.scss
@@ -94,3 +94,13 @@ $margin:
 {
     margin-block: $margin-xlarge;
 }
+
+.sc-margin-top-xsmall
+{
+    margin-top: $margin-xsmall;
+}
+
+.sc-margin-top-small
+{
+    margin-block: $margin-small;
+}
